--- a/crsApp/src/crsAppPackage/CourseRecoveryPlanFrame.form
+++ b/crsApp/src/crsAppPackage/CourseRecoveryPlanFrame.form
@@ -23,36 +23,36 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <Group type="103" groupAlignment="1" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
+                      <Component id="jCB_Batch_Edit" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jRBFilterYear" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jRBFilterEmail" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jRBFilterName" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jRBFilterID" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jButton_Milestone1" alignment="1" min="-2" pref="99" max="-2" attributes="0"/>
+                          <Component id="jButton_Milestone2" alignment="1" min="-2" pref="99" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="jCB_Batch_Edit" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="jButton_Milestone" min="-2" max="-2" attributes="0"/>
+                              <Component id="jButton_Milestone" min="-2" pref="99" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jButton_Plan_Editor" min="-2" max="-2" attributes="0"/>
+                              <Component id="jButton_Plan_Editor" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="jPanel_Student_Failed" alignment="1" max="32767" attributes="0"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace min="0" pref="90" max="32767" attributes="0"/>
-                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="jButton_Milestone3" min="-2" pref="99" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jTextField_SearchBar2" min="-2" pref="422" max="-2" attributes="0"/>
+                              <Component id="jButton_Milestone4" min="-2" pref="99" max="-2" attributes="0"/>
                           </Group>
                       </Group>
+                  </Group>
+                  <Component id="jPanel_Student_Failed" alignment="1" max="32767" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jTF_SearchIDName" min="-2" pref="422" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
@@ -64,25 +64,32 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTextField_SearchBar2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTF_SearchIDName" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jRBFilterID" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRBFilterName" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRBFilterEmail" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRBFilterYear" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="jPanel_Student_Failed" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jButton_Plan_Editor" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton_Milestone" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jCB_Batch_Edit" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Component id="jPanel_Student_Failed" min="-2" pref="484" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jButton_Milestone2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButton_Milestone3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButton_Milestone4" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jButton_Plan_Editor" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButton_Milestone" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButton_Milestone1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <Component id="jCB_Batch_Edit" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+              <EmptySpace pref="15" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -93,12 +100,16 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jScrollPanel_Student_Failed" alignment="0" max="32767" attributes="0"/>
+              <Component id="jScrollPanel_Student_Failed" pref="638" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jScrollPanel_Student_Failed" alignment="0" pref="466" max="32767" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Component id="jScrollPanel_Student_Failed" min="-2" pref="477" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -156,7 +167,6 @@
                     </Column>
                   </TableColumnModel>
                 </Property>
-                <Property name="columnSelectionAllowed" type="boolean" value="true"/>
                 <Property name="name" type="java.lang.String" value="list_student_failed" noResource="true"/>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
@@ -167,24 +177,36 @@
         </Container>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JTextField" name="jTextField_SearchBar2">
+    <Component class="javax.swing.JTextField" name="jTF_SearchIDName">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField1"/>
+        <Property name="text" type="java.lang.String" value="Search here..."/>
       </Properties>
+      <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTF_SearchIDNameFocusGained"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTF_SearchIDNameActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Search by StudentID or Name"/>
+        <Property name="text" type="java.lang.String" value="Search by Student ID or Name"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton_Plan_Editor">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Plan Editor"/>
+        <Property name="label" type="java.lang.String" value="Delete Plan"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton_Milestone">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Milestone"/>
+        <Property name="label" type="java.lang.String" value="Add Plan"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_MilestoneActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButton_Milestone1">
+      <Properties>
+        <Property name="label" type="java.lang.String" value="Edit Plan"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JCheckBox" name="jCB_Batch_Edit">
@@ -195,41 +217,20 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCB_Batch_EditActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JRadioButton" name="jRBFilterID">
+    <Component class="javax.swing.JButton" name="jButton_Milestone2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="ID"/>
-        <Property name="toolTipText" type="java.lang.String" value=""/>
+        <Property name="label" type="java.lang.String" value="Failed"/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jRBFilterIDActionPerformed"/>
-      </Events>
     </Component>
-    <Component class="javax.swing.JRadioButton" name="jRBFilterName">
+    <Component class="javax.swing.JButton" name="jButton_Milestone3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Name"/>
-        <Property name="toolTipText" type="java.lang.String" value=""/>
+        <Property name="label" type="java.lang.String" value="Ongoing"/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jRBFilterNameActionPerformed"/>
-      </Events>
     </Component>
-    <Component class="javax.swing.JRadioButton" name="jRBFilterEmail">
+    <Component class="javax.swing.JButton" name="jButton_Milestone4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Email"/>
-        <Property name="toolTipText" type="java.lang.String" value=""/>
+        <Property name="label" type="java.lang.String" value="Pass"/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jRBFilterEmailActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JRadioButton" name="jRBFilterYear">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Year"/>
-        <Property name="toolTipText" type="java.lang.String" value=""/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jRBFilterYearActionPerformed"/>
-      </Events>
     </Component>
   </SubComponents>
 </Form>
