added no error on my part but it's not using OOP concept (messy)

--- a/crsApp/src/crsAppPackage/CourseRecoveryPlanFrame.form
+++ b/crsApp/src/crsAppPackage/CourseRecoveryPlanFrame.form
@@ -23,29 +23,15 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jCB_Batch_Edit" min="-2" max="-2" attributes="0"/>
+                      <Component id="jBtnTrackPlan" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButton_Milestone1" alignment="1" min="-2" pref="99" max="-2" attributes="0"/>
-                          <Component id="jButton_Milestone2" alignment="1" min="-2" pref="99" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="jButton_Milestone" min="-2" pref="99" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jButton_Plan_Editor" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="jButton_Milestone3" min="-2" pref="99" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jButton_Milestone4" min="-2" pref="99" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
+                      <Component id="jBtnEditPlan" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="jBtnDeletePlan" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jPanel_Student_Failed" alignment="1" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
@@ -67,29 +53,15 @@
                   <Component id="jTF_SearchIDName" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jPanel_Student_Failed" min="-2" pref="484" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton_Milestone2" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton_Milestone3" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton_Milestone4" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton_Plan_Editor" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton_Milestone" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton_Milestone1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                      <Component id="jCB_Batch_Edit" min="-2" max="-2" attributes="0"/>
-                  </Group>
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="jPanel_Student_Failed" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jBtnEditPlan" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jBtnDeletePlan" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jBtnTrackPlan" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="15" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -108,7 +80,6 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jScrollPanel_Student_Failed" min="-2" pref="477" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -191,46 +162,30 @@
         <Property name="text" type="java.lang.String" value="Search by Student ID or Name"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton_Plan_Editor">
+    <Component class="javax.swing.JButton" name="jBtnEditPlan">
+      <Properties>
+        <Property name="label" type="java.lang.String" value="Add/Edit Plan"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBtnEditPlanActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jBtnDeletePlan">
       <Properties>
         <Property name="label" type="java.lang.String" value="Delete Plan"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton_Milestone">
-      <Properties>
-        <Property name="label" type="java.lang.String" value="Add Plan"/>
-      </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_MilestoneActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBtnDeletePlanActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton_Milestone1">
+    <Component class="javax.swing.JButton" name="jBtnTrackPlan">
       <Properties>
-        <Property name="label" type="java.lang.String" value="Edit Plan"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="jCB_Batch_Edit">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Multiple Select"/>
+        <Property name="actionCommand" type="java.lang.String" value="Track"/>
+        <Property name="label" type="java.lang.String" value="Track Plan"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCB_Batch_EditActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBtnTrackPlanActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton_Milestone2">
-      <Properties>
-        <Property name="label" type="java.lang.String" value="Failed"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton_Milestone3">
-      <Properties>
-        <Property name="label" type="java.lang.String" value="Ongoing"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton_Milestone4">
-      <Properties>
-        <Property name="label" type="java.lang.String" value="Pass"/>
-      </Properties>
     </Component>
   </SubComponents>
 </Form>
